# VR-Company

./: .env.example  .gitignore  GETTING_STARTED.md  README.md  pyproject.toml  requirements.txt
agents/ceo/: memory.md
agents/sales/: memory.md
agents/software-dev/: memory.md
company/: communication.md  constitution.md  manifest.yaml  organization.md
company/agents/: ceo.yaml  sales.yaml  software-dev.yaml
company/prompts/: base-agent.md
interfaces/: board_cli.py  client_cli.py  runtime_client.py
runtime/: agent_runtime.py  autogen_server.py  console_encoding.py  event_bus.py  experiment_manager.py  immutable_runtime_prompt.txt  limits.yaml  main.py  message_router.py  model_gateway.py  observability.py  paths.py  permission_reconciler.py  plugin_loader.py  process_manager.py  workspace_manager.py
seed/agents/ceo/: current-work.md  memory.md
seed/company/: access-control.yaml  communication.md  organization.md
seed/company/accounting/: accounting_plugin.py  configuration.yaml  policy.md
seed/company/prompts/: ceo.md
tests/: test_events.py  test_experiment_manager.py  test_smoke.py
tests/e2e/: conftest.py  test_tcp_protocol.py  test_web_endpoints.py
web/: __init__.py  app.py  main.py  runtime_bridge.py
web/static/: app.css  app.js  index.html
