[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vr-company"
version = "0.1.0"
description = "Virtual Reality Company experiment — AutoGen agents operating a recursive virtual company"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
  "autogen-agentchat>=0.7.5,<0.8",
  "autogen-ext[openai]>=0.7.5,<0.8",
  "autogen-core>=0.7.5,<0.8",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "agentops>=0.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]
web = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "websockets>=14.0",
  "httpx>=0.27",
]

[project.scripts]
vr-runtime = "runtime.main:main"
vr-autogen = "runtime.autogen_server:main"
vr-board = "interfaces.board_cli:main"
vr-client = "interfaces.client_cli:main"
vr-web = "web.main:main"

[tool.setuptools.packages.find]
include = ["runtime*", "interfaces*", "web*"]

[tool.setuptools.package-data]
web = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "live: tests that call a real model API (need OPENAI_API_KEY)",
]
